add new images and fix some words

--- a/Ninga Blog.html
+++ b/Ninga Blog.html
@@ -84,30 +84,31 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Cat API</h1>
+        <h1 class="heading-primary">Ninga Blog</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Using RESTful API to fetch data.
+            Using Next.js, RESTful API to get and creat data.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://maisa80.github.io/Cat_API/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://ninja-blog-alpha.vercel.app/" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
     <section class="project-details">
       <div class="main-container">
         <div class="project-details__content">
+         
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/restful.png"
+              src="./assets/png/ninga blog.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
           </div>
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/Cat API.png"
+              src="./assets/png/create user.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -117,22 +118,18 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                A REST API, also known as a RESTful API, is a simple, uniform interface that is used to make data, content, algorithms, media, and other digital resources available through web URLs. REST APIs are the most common APIs used across the web today.
-                REST allows for flexible API development using methods like JSON, URLs, and HTTP.
+                A component will fetch and display a list of blog posts. The easiest way to deploy any Next.js app is to use the Vercel Platform from the creators of Next.js. 
+                Styling with tailwindcss.
+                Formattting with prettier.
               </p>
-              <p class="project-details__desc-para">
-                Uning GET: This method allows for the server to find the data you requested and sends it back to you.
-              </p>
-              <p class="project-details__desc-para">
-                Examples of used urls Pagination & Ordering https://api.thecatapi.com/v1/images/search?limit=3&page=10&order=DESC
-                GET/breeds/:breed_id https://api.thecatapi.com/v1/breeds/abys This breed.id is available by listing all the Breeds via https://api.thecatapi.com/v1/breeds
-              </p>
+        
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
-                <div class="skills__skill">HTML</div>
-                <div class="skills__skill">CSS</div>
+                <div class="skills__skill">Next.js</div>
+                <div class="skills__skill">React</div>
+                <div class="skills__skill">tailwindcss</div>
                 <div class="skills__skill">JavaScript</div>
                 <div class="skills__skill">GIT</div>
                 <div class="skills__skill">RESTful API</div>
@@ -142,13 +139,13 @@
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://maisa80.github.io/Cat_API/"
+                href="https://ninja-blog-alpha.vercel.app/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/maisa80/Cat_API"
+                href="https://github.com/maisa80/my-first-nextjs"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
@@ -206,7 +203,7 @@
           <div class="main-footer__row main-footer__row-2">
             <h4 class="heading heading-sm text-lt">Maisa Abusalem</h4>
             <p class="main-footer__short-desc">
-              Full-stack developer with good knowledge of various programming languages and frameworks.
+                Full-stack developer with good knowledge of various programming languages and frameworks. 
             </p>
           </div>
         </div>
