correct social media links

--- a/CSSgridFlexbox.html
+++ b/CSSgridFlexbox.html
@@ -84,14 +84,15 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Responsive Design With CSS Grid and flexbox</h1>
+        <h1 class="heading-primary">Wireframes and Responsive Design</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
+            Wireframes are basic blueprints that help teams align on requirements, keeping UX design conversations focused and constructive.
             It’s always important to create websites that adapt seamlessly to various devices and screen sizes. CSS Flexbox and Grid are two powerful layout systems that make it simple to build responsive designs.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://maisa80.github.io/Cat_API/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://maisa80.github.io/Grupp-7/index.html" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -100,14 +101,14 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/restful.png"
+              src="./assets/png/CSS Grid och flexbox.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
           </div>
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/Cat API.png"
+              src="./assets/png/CSS Grid och flexbox2.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
@@ -117,14 +118,7 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Using CSS Grid och flexbox to build a responsive website, Index har 3 different layouts for mobile, tablet och desktop, Portfolio, about and contact pages har two layouts.
-              </p>
-              <p class="project-details__desc-para">
-                Uning GET: This method allows for the server to find the data you requested and sends it back to you.
-              </p>
-              <p class="project-details__desc-para">
-                Examples of used urls Pagination & Ordering https://api.thecatapi.com/v1/images/search?limit=3&page=10&order=DESC
-                GET/breeds/:breed_id https://api.thecatapi.com/v1/breeds/abys This breed.id is available by listing all the Breeds via https://api.thecatapi.com/v1/breeds
+               This was a Team Work project. We disigned Wireframes (UX) using Figma and converted them to a responsive website using CSS Grid och flexbox. Index har 3 different layouts for mobile, tablet och desktop, Portfolio, about and contact pages har two layouts.
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -132,25 +126,31 @@
               <div class="skills">
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
-                <div class="skills__skill">JavaScript</div>
                 <div class="skills__skill">GIT</div>
-                <div class="skills__skill">RESTful API</div>
+                <div class="skills__skill">Figma</div>
+              
 
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="https://maisa80.github.io/Cat_API/"
+                href="https://maisa80.github.io/Grupp-7/index.html"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="https://github.com/maisa80/Cat_API"
+                href="https://github.com/maisa80/Grupp-7"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
+              >
+              <a
+                href="https://www.figma.com/file/FVGkAl1NvCmbh8QGxZjsAf/Dynamisk-webbsida-grupp-7?node-id=0%3A1""
+                class="btn btn--med btn--theme-inv project-details__links-btn"
+                target="_blank"
+                >Wireframes Figma</a
               >
             </div>
           </div>
@@ -165,41 +165,21 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/maisa-abusalem/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/maisa80">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
+              
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
