add wordpree project

--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
                 <strong>Maisa Abusalem</strong>
                 and I'm a <strong> a Full-stack developer </strong> located in
                 Gothenburg. I've done
-                <strong> many </strong>
-                projects under my remote education and now Iam interested in creating
-                <strong>digital products </strong>
+                <strong> many projects </strong>
+                 under my remote education. Iam interested in creating
+                <strong>Digital Products using Canva </strong><a href="https://payhip.com/PurpleFlower">(Visit my Payhip store)</a>. 
                 .
               </p>
               
@@ -189,6 +189,28 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
+                src="./assets/png/wordpress.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">WordPress / WooCommerce</h3>
+              <p class="projects__row-content-desc">
+                Easily.com is an affiliate store created by WordPress and WooCommerce. 
+              </p>
+              <a
+                href="./WordPressWebsite.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
                 src="./assets/png/Cat API.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
@@ -197,10 +219,10 @@
             </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Cat API</h3>
-              <a href="https://api.thecatapi.com/v1/images/search?limit=3&page=10&order=DESC" class="projects__row-content-desc">
-                Examples of used urls Pagination & Ordering https://api.thecatapi.com/v1/images/search?limit=3&page=10&order=DESC
-              </a>
-              <a href="https://api.thecatapi.com/v1/breeds/abys" class="projects__row-content-desc">GET/breeds/:breed_id https://api.thecatapi.com/v1/breeds/abys This breed.id is available by listing all the Breeds via https://api.thecatapi.com/v1/breeds</a>
+              
+              <p class="projects__row-content-desc">
+                Fetch data from cat api (JSON) using RESTful API.
+              </p>
               <a
                 href="./CatAPI.html"
                 class="btn btn--med btn--theme dynamicBgClr"
@@ -241,9 +263,9 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Responsive Design With CSS Grid and flexbox </h3>
+              <h3 class="projects__row-content-title">Wireframes and Responsive Design </h3>
               <p class="projects__row-content-desc">
-                Using CSS Grid and flexbox to build responsive layout.
+                Using Figma to design wireframes and using CSS Grid and flexbox to build responsive layout.(team work)
               </p>
               <a
                 href="./CSSgridFlexbox.html"
