contact form working

--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
           </span> -->
         </h2>
         <div class="contact__form-container">
-          <form action="#" class="contact__form">
+          <form  action="https://api.web3forms.com/submit" method="post" class="contact__form">
             <div class="contact__form-field">
+              <input type="hidden" name="access_key" value="a786a9b0-8574-4256-9fa3-03efe5128aa3">
               <label class="contact__form-label" for="name">Name</label>
               <input
                 required
