--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <div class="home-hero__info">
           <p class="text-primary">
             I am a Full-stack developer with good knowledge of various programming languages and frameworks. As a full-stack 
-            developer, I love to work with both front-end and back-end development. 
+            developer, I love to work with both front-end and back-end development.Iam interested in creating
+                <strong>Digital Products using Canva </strong><a href="https://payhip.com/PurpleFlower">(Visit my Payhip store)</a>. 
             
             
           </p>
