update payhip image

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/wordpress.png"
+                src="./assets/png/Purple Flowers.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
