--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Maisa Portfolio</title>
     <meta name="description" content="Maisa Portfolio" />
-
+    <meta name="google-site-verification" content="Jpa7N8LrU-YWdbsVjWf1AVMW1ksiV5xQFiLjvyouHnQ" />
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -220,12 +220,22 @@
                 >
               </p>
               <a
-                href="./WordPressWebsite.html"
+                href="./PurpleFlowers.html"
                 class="btn btn--med btn--theme dynamicBgClr"
                 target="_blank"
                 >Case Study</a
               >
             </div>
+          </div>
+            <div class="projects__row">
+              <div class="projects__row-img-cont">
+                <img
+                  src="./assets/png/wordpress.png"
+                  alt="Software Screenshot"
+                  class="projects__row-img"
+                  loading="lazy"
+                />
+              </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">
                 WordPress / WooCommerce
