--- a/PurpleFlowers.html
+++ b/PurpleFlowers.html
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="https://ninja-blog-alpha.vercel.app/" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="https://payhip.com/PurpleFlowers" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
