add digital product shop to home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Maisa Portfolio</title>
     <meta name="description" content="Maisa Portfolio" />
-    <meta name="google-site-verification" content="BwbfjdM_DjooaKFYqHI0orCJIb84Yib2fq1yM_idGzs" />
+    <meta
+      name="google-site-verification"
+      content="BwbfjdM_DjooaKFYqHI0orCJIb84Yib2fq1yM_idGzs"
+    />
     <link rel="stylesheet" href="css/style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -74,7 +77,9 @@
             <li class="header__sm-menu-link">
               <a href="./index.html#projects"> Projects </a>
             </li>
-
+            <li class="header__sm-menu-link">
+              <a href="./PurpleflowersPayhipstore.html"> Digital Products </a>
+            </li>
             <li class="header__sm-menu-link">
               <a href="./index.html#contact"> Contact </a>
             </li>
@@ -227,15 +232,15 @@
               >
             </div>
           </div>
-            <div class="projects__row">
-              <div class="projects__row-img-cont">
-                <img
-                  src="./assets/png/wordpress.png"
-                  alt="Software Screenshot"
-                  class="projects__row-img"
-                  loading="lazy"
-                />
-              </div>
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/png/wordpress.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">
                 WordPress / WooCommerce
