add link to main menu

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 Projects
               </a>
             </li>
+            <li class="header__sm-menu-link">
+              <a href="./PurpleflowersPayhipstore.html"> Digital Products </a>
+            </li>
             <li class="header__link-wrapper">
               <a href="./index.html#contact" class="header__link"> Contact </a>
             </li>
