--- a/PurpleflowersPayhipstore.html
+++ b/PurpleflowersPayhipstore.html
@@ -68,7 +68,7 @@
           <ul class="header__sm-menu-links">
             <li class="header__link-wrapper">
               <a href="https://payhip.com/PurpleFlowers" class="header__link">
-                Home
+                Shop
               </a>
             </li>
 
